--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ p, li, figcaption, td, a
 }
 
 /* for topbar, column layout for the links */
+/* ---------------------------------------------------- */
 #topbar 
 {
   position: fixed;
@@ -82,6 +83,7 @@ p, li, figcaption, td, a
   background-color: var(--white3);
   width: 100%;
   height: 40px;
+  z-index: 10;
 }
 #topbar div 
 {
@@ -126,10 +128,11 @@ p, li, figcaption, td, a
 }
 
 
+/* contents */
+/* ---------------------------------------------------- */
 #intro
 {
   padding-top: 100px;
-  padding-bottom: 75px;
 }
 
 
@@ -150,9 +153,12 @@ h1
 }
 h2 
 {
+  position: relative;
+  left: -3%;
+  width: 106%;
+  margin-top: 100px;
   margin-bottom: 30px;
   height: 2rem;
-  width: 100%;
   border-width: 0px 0px 0px 3px;
   border-style: solid;
   padding-left: 20px;
@@ -168,6 +174,13 @@ h2
 {
   display: grid;
   grid-template-columns: 30% 70%;
+  grid-template-rows: auto;
+  grid-gap: 6%;
+}
+.rgrid
+{
+  display: grid;
+  grid-template-columns: 70% 30%;
   grid-template-rows: auto;
   grid-gap: 6%;
 }
