--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ p, li, figcaption, td, a
   margin-left: auto;
   margin-right: auto;
   max-width: 1000px;
+  min-width: 550px;
   width: 50%;
 }
 
